--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 PORT = 8080
+MONGO_URL = mongodb+srv://greenwich:greenwich@123a@webcollectionideasinter.xs8hvp3.mongodb.net/?retryWrites=true&w=majority
