Config route and connect db for this project

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT = 8080
-MONGO_URL = mongodb+srv://greenwich:greenwich@123a@webcollectionideasinter.xs8hvp3.mongodb.net/?retryWrites=true&w=majority
+PORT=8080
+MONGO_URL="mongodb+srv://greenwich:greenwich123@webcollectionideasinter.xs8hvp3.mongodb.net/CollectionIdeasInternalDB?retryWrites=true&w=majority"
