add jwt for middleware and create token for login

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=8080
 MONGO_URL="mongodb+srv://greenwich:greenwich123@webcollectionideasinter.xs8hvp3.mongodb.net/CollectionIdeasInternalDB?retryWrites=true&w=majority"
+ACCESS_TOKEN_SECRET = "accessTokenSecret"
+REFRESH_TOKEN_SECRET="refreshTokenSecret"
