--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
+    "@mui/x-date-pickers": "^6.0.1",
     "axios": "^1.3.2",
+    "dayjs": "^1.11.7",
     "history": "^5.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
