--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,18 @@
 PORT=8080
 MONGO_URL="mongodb+srv://greenwich:greenwich123@webcollectionideasinter.xs8hvp3.mongodb.net/CollectionIdeasInternalDB?retryWrites=true&w=majority"
+
 ACCESS_TOKEN_SECRET = "accessTokenSecret"
 REFRESH_TOKEN_SECRET="refreshTokenSecret"
+
 CLOUDINARY_NAME="drt4qtuwv"
 CLOUDINARY_KEY="721115329367458"
 CLOUDINARY_SECRET="HxAPFdG8Ez7c4novx8Hf3pHiFJI"
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=datnquit@gmail.com
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=datnquit@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
