complete filter idea most like

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=8080
+
 MONGO_URL="mongodb+srv://greenwich:greenwich123@webcollectionideasinter.xs8hvp3.mongodb.net/CollectionIdeasInternalDB?retryWrites=true&w=majority"
 
 ACCESS_TOKEN_SECRET = "accessTokenSecret"
@@ -11,8 +12,9 @@ CLOUDINARY_SECRET="HxAPFdG8Ez7c4novx8Hf3pHiFJI"
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=datnquit@gmail.com
-MAIL_PASSWORD=
+MAIL_USERNAME=hohieu201qn@gmail.com
+MAIL_PASSWORD=aisizkh123!
 MAIL_ENCRYPTION=TLS
-MAIL_FROM_ADDRESS=datnquit@gmail.com
+MAIL_FROM_ADDRESS=hohieu201qn@gmail.com
+APP_NAME=WEB_COLLECTION_IDEA
 MAIL_FROM_NAME="${APP_NAME}"
