--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=8080
-
+APP_URL=http://localhost:5173
 MONGO_URL="mongodb+srv://greenwich:greenwich123@webcollectionideasinter.xs8hvp3.mongodb.net/CollectionIdeasInternalDB?retryWrites=true&w=majority"
 
 ACCESS_TOKEN_SECRET = "accessTokenSecret"
@@ -13,7 +13,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=hohieu201qn@gmail.com
-MAIL_PASSWORD=aisizkh123!
+MAIL_PASSWORD=xcfplovjmsjekooz
 MAIL_ENCRYPTION=TLS
 MAIL_FROM_ADDRESS=hohieu201qn@gmail.com
 APP_NAME=WEB_COLLECTION_IDEA
