--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,12 @@
     "@mui/styled-engine-sc": "^5.11.9",
     "@mui/x-date-pickers": "^6.0.1",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "history": "^5.3.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
