--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-existence": "^0.1.6",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
