--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
     "history": "^5.3.0",
+    "jszip": "^3.10.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
