--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-PORT=8080
-APP_URL=https://frontend-collection-ideas.onrender.com
+PORT=5173
+APP_URL=http://localhost:5173/
 NODE_ENV=dev
 MONGO_URL="mongodb+srv://greenwich:greenwich123@webcollectionideasinter.xs8hvp3.mongodb.net/CollectionIdeasInternalDB?retryWrites=true&w=majority"
 
